--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,7 @@
         <nav>
             <ul class="nav__links">
                 <li><a href="#prev"><button style="margin-right: 30px;">Prevention</button></a></li>
+                <li><a href="/quiz.html"><button style="margin-right: 30px;">Quiz</button></a></li>
             </ul>
         </nav>
         <a class="cta" href="#abu"><button style="margin-right: -30px;">About</button></a>
